# invest-deploy

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  _dash.json  deepseek.txt  docker-compose.yml  pip.conf  pyproject.toml  requirements-docker.txt  requirements.txt
config/: ai_prompts.yaml  alert_defaults.yaml  crawl_sources.yaml  dca_defaults.yaml  instruments.yaml  metric_catalog.yaml  ndx_constituents.yaml  scoring_weights.yaml  site_defaults.yaml  spx_constituents.yaml
data/: alert_config.override.yaml  alert_state.json  crawl_config.override.yaml
docs/: ARCHITECTURE.md  CRAWL_CONFIG.md  DATA_ISOLATION.md  DATA_SOURCES.md  DCA_SCHEMES.md  DOCKER.md  FRONTEND.md  M1.md  M2_SCORING.md  M3_DCA.md  NDX_SCORING.md  PROJECT_PLAN.md  SPX_SCORING.md  TROUBLESHOOTING.md  UI_DESIGN.md
invest/: __init__.py  config_loader.py  http_client.py  settings.py
invest/api/: admin_routes.py  auth_routes.py  cache_middleware.py  frontend_auth_middleware.py  fund_routes.py  main.py  user_me_routes.py
invest/core/: __init__.py  (+23 more)
scripts/: bootstrap-data.ps1  build-web-local.ps1  docker-build.ps1  install.ps1
tests/: test_all_in_context.py  test_cboe_putcall.py  test_chart_macro.py  test_data_isolation.py  test_fund_manager.py  test_fund_performance.py  test_lump_sum_calc.py  test_macro_map.py  test_multpl_parser.py  test_price_series.py  test_validators.py
web/: .dockerignore  .env.local.example  Dockerfile  Dockerfile.prebuilt  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
(+98 files in other folders)
